don't track checkpoints

--- a/Advent_of_code.ipynb
+++ b/Advent_of_code.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,8 @@
       "start\n",
       "466.0\n",
       "end\n",
-      "start\n"
+      "start\n",
+      "repeat found for 750.0\n"
      ]
     }
    ],
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,6 +121,7 @@
     "                if (list(ID1)[:letter_index]+list(ID1)[letter_index+1:]) == (list(ID2)[:letter_index]+list(ID2)[letter_index+1:]):\n",
     "                    if ID1 != ID2:\n",
     "                        print (\"match found:\"+ID1+\"/\"+ID2)\n",
+    "                        return\n",
     "\n",
     "                else:\n",
     "                    continue\n",
@@ -130,9 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5166\n",
+      "match found:cypueihajytotrdkgzxfqplbwn/cypueihajytomrdkgzxfqplbwn\n",
+      "match found:cypueihajytomrdkgzxfqplbwn/cypueihajytotrdkgzxfqplbwn\n"
+     ]
+    }
+   ],
    "source": [
     "day_two() # 5166\n",
     "          # cypueihajytordkgzxfqplbwn"
@@ -147,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +210,8 @@
     "            # if all of the array indices are also 1 in the fabric_array, then we have our match\n",
     "            if all(elem in fabric_indices for elem in individual_indices):\n",
     "                print (ID)\n",
-    "    print (\"end\")\n",
+    "                return\n",
+    "    \n",
     "                \n",
     "    \n",
     "# for sanity checks..\n",
@@ -226,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,9 +297,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:18: FutureWarning: set_value is deprecated and will be removed in a future release. Please use .at[] or .iat[] accessors instead\n",
+      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:20: FutureWarning: set_value is deprecated and will be removed in a future release. Please use .at[] or .iat[] accessors instead\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1487.  461.]\n",
+      " [1493.  429.]\n",
+      " [ 103.  291.]\n",
+      " [2389.  427.]\n",
+      " [3391.  366.]\n",
+      " [3253.  229.]\n",
+      " [ 641.  402.]\n",
+      " [ 131.  489.]\n",
+      " [2797.  349.]\n",
+      " [2437.  358.]\n",
+      " [2447.  448.]\n",
+      " [ 619.  375.]\n",
+      " [1613.  334.]\n",
+      " [1033.  252.]\n",
+      " [2969.  235.]\n",
+      " [ 443.  371.]\n",
+      " [2089.  330.]\n",
+      " [1373.  367.]\n",
+      " [2417.  432.]\n",
+      " [3023.  150.]\n",
+      " [2683.    0.]\n",
+      " [1973.    0.]\n",
+      " [1913.    0.]]\n",
+      "489.0\n",
+      "1487 13.0\n",
+      "1493 14.0\n",
+      "103 10.0\n",
+      "2389 15.0\n",
+      "3391 11.0\n",
+      "3253 9.0\n",
+      "641 14.0\n",
+      "131 14.0\n",
+      "2797 9.0\n",
+      "2437 12.0\n",
+      "2447 11.0\n",
+      "619 12.0\n",
+      "1613 11.0\n",
+      "1033 10.0\n",
+      "2969 7.0\n",
+      "443 13.0\n",
+      "2089 9.0\n",
+      "1373 11.0\n",
+      "2417 11.0\n",
+      "3023 5.0\n",
+      "2683 0.0\n",
+      "1973 0.0\n",
+      "1913 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "# I got sloppy here and done stuff by inspection, but this was the easiest way (for me)\n",
     "\n",
@@ -317,9 +392,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11546\n"
+     ]
+    }
+   ],
    "source": [
     "## at first I tried iterating through each element of the string and comparing letter to letters before and after.\n",
     "## Using regex is much less clunky\n",
