--- a/Advent_of_code.ipynb
+++ b/Advent_of_code.ipynb
@@ -392,17 +392,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11546\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## at first I tried iterating through each element of the string and comparing letter to letters before and after.\n",
     "## Using regex is much less clunky\n",
@@ -410,36 +402,57 @@
     "import string\n",
     "import re\n",
     "\n",
-    "polymer_string = \"dabAcCaCBAcCcaDA\"\n",
-    "polymer_string = open(\"input (4).txt\",\"r\").read()\n",
-    "lowers=list(string.ascii_lowercase)\n",
+    "def react_polymer(polymer_string):\n",
+    "    lowers=list(string.ascii_lowercase)\n",
+    "    proceed = True\n",
+    "    while proceed==True:\n",
+    "        proceed=False\n",
+    "        for letter in lowers:\n",
+    "            Ul = letter.upper()+letter\n",
+    "            if re.search(Ul,polymer_string):\n",
+    "                regex=re.search(r'(.*)'+Ul+'(.*)',polymer_string)\n",
+    "                polymer_string=regex.group(1)+regex.group(2)\n",
+    "                proceed=True\n",
+    "            lU = letter + letter.upper()\n",
+    "            if re.search(lU,polymer_string):\n",
+    "                regex=re.search(r'(.*)'+lU+'(.*)',polymer_string)\n",
+    "                polymer_string=regex.group(1)+regex.group(2)\n",
+    "                proceed=True\n",
     "\n",
-    "proceed = True\n",
-    "while proceed==True:\n",
-    "    proceed=False\n",
-    "    for letter in lowers:\n",
-    "        Ul = letter.upper()+letter\n",
-    "        if re.search(Ul,polymer_string):\n",
-    "            regex=re.search(r'(.*)'+Ul+'(.*)',polymer_string)\n",
-    "            polymer_string=regex.group(1)+regex.group(2)\n",
-    "            proceed=True\n",
-    "        lU = letter + letter.upper()\n",
-    "        if re.search(lU,polymer_string):\n",
-    "            regex=re.search(r'(.*)'+lU+'(.*)',polymer_string)\n",
-    "            polymer_string=regex.group(1)+regex.group(2)\n",
-    "            proceed=True\n",
-    "\n",
-    "print (len(polymer_string))\n",
-    "\n",
-    "# answer 11546"
+    "    return (len(polymer_string))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "part one: 11546\n"
+     ]
+    }
+   ],
+   "source": [
+    "# part one\n",
+    "# polymer_string = \"dabAcCaCBAcCcaDA\"   # example string\n",
+    "polymer_string = open(\"input (4).txt\",\"r\").read()   # question string\n",
+    "units=react_polymer(polymer_string) # answer 11546\n",
+    "print (\"part one: \"+str(units))\n",
+    "\n",
+    "# part two\n",
+    "results=[]\n",
+    "lowers=list(string.ascii_lowercase)\n",
+    "for letter in lowers:\n",
+    "    polymer_string_reduced = re.sub(letter,'',polymer_string)\n",
+    "    polymer_string_reduced = re.sub(letter.upper(),'',polymer_string_reduced)\n",
+    "    results.append([letter,react_polymer(polymer_string_reduced)])\n",
+    "# I need to do this a better way than appending to lists...making an array..transforming to ints...finding min...\n",
+    "print (\"part two: \"+min([int(x) for x in np.array(results)[:,1]]))"
+   ]
   },
   {
    "cell_type": "code",
