got example from Q6.1 working

--- a/Advent_of_code.ipynb
+++ b/Advent_of_code.ipynb
@@ -425,14 +425,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "part one: 11546\n"
+      "part one: 11546\n",
+      "part two: 5124\n"
      ]
     }
    ],
@@ -440,8 +441,8 @@
     "# part one\n",
     "# polymer_string = \"dabAcCaCBAcCcaDA\"   # example string\n",
     "polymer_string = open(\"input (4).txt\",\"r\").read()   # question string\n",
-    "units=react_polymer(polymer_string) # answer 11546\n",
-    "print (\"part one: \"+str(units))\n",
+    "units=react_polymer(polymer_string) \n",
+    "print (\"part one: \"+str(units))# answer 11546\n",
     "\n",
     "# part two\n",
     "results=[]\n",
@@ -451,7 +452,102 @@
     "    polymer_string_reduced = re.sub(letter.upper(),'',polymer_string_reduced)\n",
     "    results.append([letter,react_polymer(polymer_string_reduced)])\n",
     "# I need to do this a better way than appending to lists...making an array..transforming to ints...finding min...\n",
-    "print (\"part two: \"+min([int(x) for x in np.array(results)[:,1]]))"
+    "print (\"part two: \"+str(min([int(x) for x in np.array(results)[:,1]]))) # answer "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "coordinates = np.array([\n",
+    "[1, 1],\n",
+    "[1, 6],\n",
+    "[8, 3],\n",
+    "[3, 4],\n",
+    "[5, 5],\n",
+    "[8, 9]])   # from puzzle example input\n",
+    "\n",
+    "minX = min(coordinates[:,0]) \n",
+    "maxX = max(coordinates[:,0]) \n",
+    "minY = min(coordinates[:,1]) \n",
+    "\n",
+    "coordinates[:,0] = [x-minX for x in coordinates[:,0]]\n",
+    "coordinates[:,1] = [y-minY for y in coordinates[:,1]]\n",
+    "\n",
+    "height=maxY-minY+1\n",
+    "width=maxX-minX+1\n",
+    "\n",
+    "charlist = [['-----']*width]*height\n",
+    "location_map = np.array(charlist)\n",
+    "\n",
+    "for i in range(location_map.shape[0]):\n",
+    "    for j in range(location_map.shape[1]):\n",
+    "        distances = [np.absolute(i-y)+np.absolute(j-x) for [x,y] in coordinates]\n",
+    "        if len(np.where(distances==min(distances))[0]) > 1:\n",
+    "            location_map[i,j] = \".....\"\n",
+    "        else:      \n",
+    "            location_map[i,j] = str(coordinates[distances.index(min(distances))])\n",
+    "            \n",
+    "finite_locations_count=[]\n",
+    "for coordinate in coordinates:\n",
+    "    x=str(coordinate)\n",
+    "    if (x in location_map[0,:]) or (x in location_map[-1,:]) or (x in location_map[:,0]) or (x in location_map[:,-1]):\n",
+    "        pass\n",
+    "    else:\n",
+    "        finite_locations_count.append((location_map==x).sum())\n",
+    "        \n",
+    "max(finite_locations_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinates = open(\"input (5).txt\",\"r\").read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'194, 200\\n299, 244\\n269, 329\\n292, 55\\n211, 63\\n123, 311\\n212, 90\\n292, 169\\n359, 177\\n354, 95\\n101, 47\\n95, 79\\n95, 287\\n294, 126\\n81, 267\\n330, 78\\n202, 165\\n225, 178\\n266, 272\\n351, 326\\n180, 62\\n102, 178\\n151, 101\\n343, 145\\n205, 312\\n74, 193\\n221, 56\\n89, 89\\n242, 172\\n59, 138\\n83, 179\\n223, 88\\n297, 234\\n147, 351\\n226, 320\\n358, 338\\n321, 172\\n54, 122\\n263, 165\\n126, 341\\n64, 132\\n264, 306\\n72, 202\\n98, 49\\n238, 67\\n310, 303\\n277, 281\\n222, 318\\n357, 169\\n123, 225\\n'"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coordinates"
    ]
   },
   {
