--- a/Advent_of_code.ipynb
+++ b/Advent_of_code.ipynb
@@ -464,16 +464,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17"
+       "4475"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,17 +481,27 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    " # from puzzle example input\n",
     "coordinates = np.array([\n",
     "[1, 1],\n",
     "[1, 6],\n",
     "[8, 3],\n",
     "[3, 4],\n",
     "[5, 5],\n",
-    "[8, 9]])   # from puzzle example input\n",
+    "[8, 9]])  \n",
+    "\n",
+    "# for question\n",
+    "coordinates=[]\n",
+    "with open(\"input (5).txt\",\"r\") as filein:\n",
+    "    for line in filein:\n",
+    "        coordinates.append([int(x.split(\"\\n\")[0]) for x in line.split(\",\")])\n",
+    "        \n",
+    "coordinates = np.array(coordinates) \n",
     "\n",
     "minX = min(coordinates[:,0]) \n",
     "maxX = max(coordinates[:,0]) \n",
     "minY = min(coordinates[:,1]) \n",
+    "maxY = max(coordinates[:,1]) \n",
     "\n",
     "coordinates[:,0] = [x-minX for x in coordinates[:,0]]\n",
     "coordinates[:,1] = [y-minY for y in coordinates[:,1]]\n",
@@ -499,17 +509,17 @@
     "height=maxY-minY+1\n",
     "width=maxX-minX+1\n",
     "\n",
-    "charlist = [['-----']*width]*height\n",
+    "charlist = [['---------']*width]*height\n",
     "location_map = np.array(charlist)\n",
     "\n",
     "for i in range(location_map.shape[0]):\n",
     "    for j in range(location_map.shape[1]):\n",
     "        distances = [np.absolute(i-y)+np.absolute(j-x) for [x,y] in coordinates]\n",
     "        if len(np.where(distances==min(distances))[0]) > 1:\n",
-    "            location_map[i,j] = \".....\"\n",
+    "            location_map[i,j] = \".........\"\n",
     "        else:      \n",
     "            location_map[i,j] = str(coordinates[distances.index(min(distances))])\n",
-    "            \n",
+    "\n",
     "finite_locations_count=[]\n",
     "for coordinate in coordinates:\n",
     "    x=str(coordinate)\n",
@@ -523,39 +533,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coordinates = open(\"input (5).txt\",\"r\").read()"
+    "      "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'194, 200\\n299, 244\\n269, 329\\n292, 55\\n211, 63\\n123, 311\\n212, 90\\n292, 169\\n359, 177\\n354, 95\\n101, 47\\n95, 79\\n95, 287\\n294, 126\\n81, 267\\n330, 78\\n202, 165\\n225, 178\\n266, 272\\n351, 326\\n180, 62\\n102, 178\\n151, 101\\n343, 145\\n205, 312\\n74, 193\\n221, 56\\n89, 89\\n242, 172\\n59, 138\\n83, 179\\n223, 88\\n297, 234\\n147, 351\\n226, 320\\n358, 338\\n321, 172\\n54, 122\\n263, 165\\n126, 341\\n64, 132\\n264, 306\\n72, 202\\n98, 49\\n238, 67\\n310, 303\\n277, 281\\n222, 318\\n357, 169\\n123, 225\\n'"
-      ]
-     },
-     "execution_count": 140,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "coordinates"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -574,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
