--- a/Advent_of_code.ipynb
+++ b/Advent_of_code.ipynb
@@ -464,18 +464,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4475"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "part one: 4475\n",
+      "part two: 35237\n"
+     ]
     }
    ],
    "source": [
@@ -512,9 +510,12 @@
     "charlist = [['---------']*width]*height\n",
     "location_map = np.array(charlist)\n",
     "\n",
+    "safe_region_count=0\n",
     "for i in range(location_map.shape[0]):\n",
     "    for j in range(location_map.shape[1]):\n",
     "        distances = [np.absolute(i-y)+np.absolute(j-x) for [x,y] in coordinates]\n",
+    "        if sum(distances) < 10000:\n",
+    "            safe_region_count +=1\n",
     "        if len(np.where(distances==min(distances))[0]) > 1:\n",
     "            location_map[i,j] = \".........\"\n",
     "        else:      \n",
@@ -528,17 +529,16 @@
     "    else:\n",
     "        finite_locations_count.append((location_map==x).sum())\n",
     "        \n",
-    "max(finite_locations_count)"
+    "print (\"part one: \"+str(max(finite_locations_count)))\n",
+    "print (\"part two: \"+str(safe_region_count))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "      "
-   ]
+   "source": []
   }
  ],
  "metadata": {
