Day 6 part 1 completed

--- a/Advent_of_code.ipynb
+++ b/Advent_of_code.ipynb
@@ -534,6 +534,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 7\n",
+    "\n",
+    "This seems a good time to get my head around Python default dictionaries. Nice tutorial here: https://www.accelebrate.com/blog/using-defaultdict-python/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "answer=[]\n",
+    "\n",
+    "instruction_list = []\n",
+    "#with open(\"input (6).txt\",\"r\") as filein:\n",
+    "with open(\"Day 6 example\",\"r\") as filein:\n",
+    "    for line in filein:\n",
+    "        instruction_list.append([line.split()[1],line.split()[-3]])\n",
+    "        \n",
+    "steps = defaultdict(list)\n",
+    "\n",
+    "for [prerequisite, step] in instruction_list:\n",
+    "    steps[step].append(prerequisite)\n",
+    "    \n",
+    "step_list = []\n",
+    "for row in instruction_list:\n",
+    "    step_list.append(row[1])\n",
+    "\n",
+    "for row in instruction_list:\n",
+    "    prerequisite = row[0]\n",
+    "    if prerequisite not in step_list and prerequisite not in steps:\n",
+    "        steps[prerequisite]\n",
+    "\n",
+    "### this is the bit that needs to loop until all empty\n",
+    "while all(value == [] for value in steps.values()) is False:\n",
+    "    steps_ready = {k: v for k, v in steps.items() if v==[]}\n",
+    "    next_step = min(steps_ready.keys()) \n",
+    "    answer.append(next_step)\n",
+    "    # need to remove from steps list\n",
+    "    del steps[next_step]\n",
+    "\n",
+    "    for key,value in steps.items():\n",
+    "        value = [item for item in value if item != next_step]\n",
+    "        steps[key] = value\n",
+    "        \n",
+    "    if len(steps) == 1:\n",
+    "        for key in steps:\n",
+    "            answer.append(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C', 'A', 'B', 'D', 'F', 'E']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(answer)  # ['I', 'O', 'F', 'S', 'J', 'Q', 'D', 'U', 'W', 'A', 'P', 'X', 'E', 'L', 'N', 'V', 'Y', 'Z', 'M', 'H', 'T', 'B', 'C', 'R', 'G', 'K']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
