--- a/Advent_of_code.ipynb
+++ b/Advent_of_code.ipynb
@@ -544,9 +544,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 201,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'available_elvest' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-201-e34ca46c95a3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0melf_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m         \u001b[0mallocate_to_elf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m         \u001b[0manswer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext_step\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0;31m# need to remove from steps list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-187-b5edff0cb0d4>\u001b[0m in \u001b[0;36mallocate_to_elf\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mallocate_to_elf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mavailable_elves\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrota\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mavailable_elvest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'available_elvest' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from collections import defaultdict\n",
     "\n",
@@ -573,25 +586,45 @@
     "        steps[prerequisite]\n",
     "\n",
     "### this is the bit that needs to loop until all empty\n",
+    "seconds=0\n",
     "while all(value == [] for value in steps.values()) is False:\n",
     "    steps_ready = {k: v for k, v in steps.items() if v==[]}\n",
     "    next_step = min(steps_ready.keys()) \n",
-    "    answer.append(next_step)\n",
-    "    # need to remove from steps list\n",
-    "    del steps[next_step]\n",
+    "    \n",
+    "    if elf_available():\n",
+    "        allocate_to_elf()\n",
+    "        answer.append(next_step)\n",
+    "        # need to remove from steps list\n",
+    "        del steps[next_step]\n",
     "\n",
-    "    for key,value in steps.items():\n",
-    "        value = [item for item in value if item != next_step]\n",
-    "        steps[key] = value\n",
-    "        \n",
+    "        for key,value in steps.items():\n",
+    "            value = [item for item in value if item != next_step]\n",
+    "            steps[key] = value\n",
+    "    \n",
+    "    seconds += 1 #(ord(next_step)-64)\n",
+    "    \n",
     "    if len(steps) == 1:\n",
     "        for key in steps:\n",
-    "            answer.append(key)"
+    "            answer.append(key)\n",
+    "            seconds += (ord(key)-65) # as already added 1 above\n",
+    "\n",
+    "rota = defaultdict\n",
+    "num_elves = 2\n",
+    "for elf in range(num_elves):\n",
+    "    rota[elf] = True\n",
+    "    \n",
+    "def elf_available():\n",
+    "    if any(rota.value()):\n",
+    "        return True\n",
+    "    \n",
+    "def allocate_to_elf():\n",
+    "    available_elvens = {k: v for k, v in rota.items() if v==True}\n",
+    "    available_elvens[min(t.keys())]=False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +636,353 @@
     }
    ],
    "source": [
+    "rota\n",
+    "elf_available()\n",
     "print(answer)  # ['I', 'O', 'F', 'S', 'J', 'Q', 'D', 'U', 'W', 'A', 'P', 'X', 'E', 'L', 'N', 'V', 'Y', 'Z', 'M', 'H', 'T', 'B', 'C', 'R', 'G', 'K']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 432,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {'A': ['C'], 'F': ['C'], 'B': ['A'], 'D': ['A'], 'E': ['B', 'D', 'F'], 'C': []}) \n",
+      " defaultdict(None, {0: [True], 1: [True]})\n",
+      "allocate to 0\n",
+      "defaultdict(<class 'list'>, {'A': [], 'F': [], 'B': ['A'], 'D': ['A'], 'E': ['B', 'D', 'F']}) \n",
+      " defaultdict(None, {0: [False, False, True], 1: [True]})\n",
+      "allocate to 1\n",
+      "defaultdict(<class 'list'>, {'F': [], 'B': [], 'D': [], 'E': ['B', 'D', 'F']}) \n",
+      " defaultdict(None, {0: [False, True], 1: [True]})\n",
+      "allocate to 1\n",
+      "defaultdict(<class 'list'>, {'F': [], 'D': [], 'E': ['D', 'F']}) \n",
+      " defaultdict(None, {0: [True], 1: [False, True]})\n",
+      "allocate to 0\n",
+      "defaultdict(<class 'list'>, {'F': [], 'E': ['F']}) \n",
+      " defaultdict(None, {0: [False, False, False, True], 1: [True]})\n",
+      "allocate to 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "    \n",
+    "def elf_available():\n",
+    "    for k,v in rota.items():\n",
+    "        if True in v:\n",
+    "            return True    \n",
+    "    return False\n",
+    "\n",
+    "def allocate_to_elf(seconds):\n",
+    "    available_elves = {k: v for k, v in rota.items() if v[0]==True}\n",
+    "    lister = [False for x in range(seconds)]+[True]\n",
+    "    if len(available_elves)>0:\n",
+    "        rota[min(available_elves.keys())] = lister\n",
+    "        print (\"allocate to \"+str(min(available_elves.keys())))\n",
+    "    \n",
+    "def deallocate_from_elves():\n",
+    "    for k,v in rota.items():\n",
+    "        if False in v:\n",
+    "            v.remove(False)\n",
+    "            \n",
+    "            \n",
+    "global rota\n",
+    "rota = defaultdict()\n",
+    "num_elves = 2\n",
+    "\n",
+    "for elf in range(num_elves):\n",
+    "    rota[elf] = [True]\n",
+    "\n",
+    "answer=[]\n",
+    "\n",
+    "instruction_list = []\n",
+    "#with open(\"input (6).txt\",\"r\") as filein:\n",
+    "with open(\"Day 6 example\",\"r\") as filein:\n",
+    "    for line in filein:\n",
+    "        instruction_list.append([line.split()[1],line.split()[-3]])\n",
+    "        \n",
+    "steps = defaultdict(list)\n",
+    "\n",
+    "for [prerequisite, step] in instruction_list:\n",
+    "    steps[step].append(prerequisite)\n",
+    "    \n",
+    "step_list = []\n",
+    "for row in instruction_list:\n",
+    "    step_list.append(row[1])\n",
+    "\n",
+    "for row in instruction_list:\n",
+    "    prerequisite = row[0]\n",
+    "    if prerequisite not in step_list and prerequisite not in steps:\n",
+    "        steps[prerequisite]\n",
+    "\n",
+    "### this is the bit that needs to loop until all empty\n",
+    "seconds=0\n",
+    "while all(value == [] for value in steps.values()) is False:\n",
+    "    print (steps,\"\\n\",rota)\n",
+    "    steps_ready = {k: v for k, v in steps.items() if v==[]}\n",
+    "    next_step = min(steps_ready.keys()) \n",
+    "    \n",
+    "    if elf_available():\n",
+    "        allocate_to_elf(ord(next_step)-64)\n",
+    "        answer.append(next_step)\n",
+    "        # need to remove from steps list\n",
+    "        del steps[next_step]\n",
+    "\n",
+    "        for key,value in steps.items():\n",
+    "            value = [item for item in value if item != next_step]\n",
+    "            steps[key] = value\n",
+    "    \n",
+    "    seconds += 1 \n",
+    "    deallocate_from_elves()\n",
+    "    \n",
+    "    if len(steps) == 1:\n",
+    "        for key in steps:\n",
+    "            answer.append(key)\n",
+    "            seconds += (ord(key)-65) # as already added 1 above\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 428,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C', 'A', 'B', 'D', 'F', 'E']"
+      ]
+     },
+     "execution_count": 428,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rota = defaultdict()\n",
+    "num_elves = 2\n",
+    "for elf in range(num_elves):\n",
+    "    rota[elf] = [True]\n",
+    "    \n",
+    "def elf_available():\n",
+    "    if any(rota.values()):\n",
+    "        return True    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 406,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rota = defaultdict()\n",
+    "num_elves = 2\n",
+    "for elf in range(num_elves):\n",
+    "    rota[elf] = [True]\n",
+    "    \n",
+    "def elf_available():\n",
+    "    for k,v in rota.items():\n",
+    "        if True in v:\n",
+    "            return True    \n",
+    "    return False\n",
+    "\n",
+    "def allocate_to_elf(seconds):\n",
+    "    available_elves = {k: v for k, v in rota.items() if v[0]==True}\n",
+    "    lister = [False for x in range(seconds)]+[True]\n",
+    "    if len(available_elves)>0:\n",
+    "        rota[min(available_elves.keys())] = lister\n",
+    "    return rota\n",
+    "    \n",
+    "def deallocate_from_elves(rota):\n",
+    "    rota = {k: v.remove(False) for k, v in rota.items() if False in v}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 407,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([[True], [True]])"
+      ]
+     },
+     "execution_count": 407,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rota.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 408,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 408,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elf_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 410,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(None, {0: [False, True], 1: [False, True]})"
+      ]
+     },
+     "execution_count": 410,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "allocate_to_elf(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 413,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deallocate_from_elves(rota)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 414,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(None, {0: [True], 1: [True]})"
+      ]
+     },
+     "execution_count": 414,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rota"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'available_elvest' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-202-51d21abca338>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0melf_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m         \u001b[0mallocate_to_elf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m         \u001b[0manswer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext_step\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0;31m# need to remove from steps list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-187-b5edff0cb0d4>\u001b[0m in \u001b[0;36mallocate_to_elf\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mallocate_to_elf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mavailable_elves\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrota\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mv\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mavailable_elvest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'available_elvest' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "answer=[]\n",
+    "\n",
+    "instruction_list = []\n",
+    "#with open(\"input (6).txt\",\"r\") as filein:\n",
+    "with open(\"Day 6 example\",\"r\") as filein:\n",
+    "    for line in filein:\n",
+    "        instruction_list.append([line.split()[1],line.split()[-3]])\n",
+    "        \n",
+    "steps = defaultdict(list)\n",
+    "\n",
+    "for [prerequisite, step] in instruction_list:\n",
+    "    steps[step].append(prerequisite)\n",
+    "    \n",
+    "step_list = []\n",
+    "for row in instruction_list:\n",
+    "    step_list.append(row[1])\n",
+    "\n",
+    "for row in instruction_list:\n",
+    "    prerequisite = row[0]\n",
+    "    if prerequisite not in step_list and prerequisite not in steps:\n",
+    "        steps[prerequisite]\n",
+    "\n",
+    "### this is the bit that needs to loop until all empty\n",
+    "seconds=0\n",
+    "while all(value == [] for value in steps.values()) is False:\n",
+    "    steps_ready = {k: v for k, v in steps.items() if v==[]}\n",
+    "    next_step = min(steps_ready.keys()) \n",
+    "    \n",
+    "    if elf_available():\n",
+    "        allocate_to_elf()\n",
+    "        answer.append(next_step)\n",
+    "        # need to remove from steps list\n",
+    "        del steps[next_step]\n",
+    "\n",
+    "        for key,value in steps.items():\n",
+    "            value = [item for item in value if item != next_step]\n",
+    "            steps[key] = value\n",
+    "    \n",
+    "    seconds += 1 #(ord(next_step)-64)\n",
+    "    \n",
+    "    if len(steps) == 1:\n",
+    "        for key in steps:\n",
+    "            answer.append(key)\n",
+    "            seconds += (ord(key)-65) # as already added 1 above\n",
+    "\n",
+    "rota = defaultdict\n",
+    "num_elves = 2\n",
+    "for elf in range(num_elves):\n",
+    "    rota[elf] = True\n",
+    "    \n",
+    "def elf_available():\n",
+    "    if any(rota.value()):\n",
+    "        return True\n",
+    "    \n",
+    "def allocate_to_elf():\n",
+    "    available_elvens = {k: v for k, v in rota.items() if v==True}\n",
+    "    available_elvens[min(t.keys())]=False"
    ]
   },
   {
